--- a/index.html
+++ b/index.html
@@ -91,23 +91,31 @@
                 <ul class="box_list">
                     <li class="box_list_item">
                         <img src="./images/mark_guerrero.jpg" alt="mark_guerrero" width="264" height="260">
-                        <h3 class="box_list_item_title">Mark Guerrero</h3>
-                        <p class="box_list_item_text">Product Designer</p>
+                        <div class="box_list_item_title-text">
+                            <h3 class="box_list_item_title">Mark Guerrero</h3>
+                            <p class="box_list_item_text">Product Designer</p>
+                        </div>
                     </li>
                     <li class="box_list_item">
                         <img src="./images/tom_ford.jpg" alt="tom_ford" width="264" height="260">
-                        <h3 class="box_list_item_title">Tom Ford</h3>
-                        <p class="box_list_item_text">Frontend Developer</p>
+                        <div class="box_list_item_title-text">
+                            <h3 class="box_list_item_title">Tom Ford</h3>
+                            <p class="box_list_item_text">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="box_list_item">
                         <img src="./images/camila_garcia.jpg" alt="camila_garcia" width="264" height="260">
-                        <h3 class="box_list_item_title">Camila Garcia</h3>
-                        <p class="box_list_item_text">Marketing</p>
+                        <div class="box_list_item_title-text">
+                            <h3 class="box_list_item_title">Camila Garcia</h3>
+                            <p class="box_list_item_text">Marketing</p>
+                        </div>
                     </li>
                     <li class="box_list_item">
                         <img src="./images/daniel_wilson.jpg" alt="daniel_wilson" width="264" height="260">
-                        <h3 class="box_list_item_title">Daniel Wilson</h3>
-                        <p class="box_list_item_text">UI Designer</p>
+                        <div class="box_list_item_title-text">
+                            <h3 class="box_list_item_title">Daniel Wilson</h3>
+                            <p class="box_list_item_text">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
